--- a/colorgame.css
+++ b/colorgame.css
@@ -1,63 +1,75 @@
 body{
 	background-color: #232323;
-	margin: 0;
-	font-family: "Montserrat","Avenir";  
+	margin : 0;
+	font-family : "Avenir", "Montserrat;
 }
-.squares{
-	width: 30%;
+
+.square {
+	width : 30%;
+	background: purple;
 	padding-bottom: 30%;
 	float: left;
-	margin: 1.66%; 
+	margin :1.66%;
 	border-radius: 15%;
-	transition: background 0.6s;
+	transition : background 0.8s;
+	--webkit-transition : background 0.8s;
+	-moz-transition: background 0.8s;
 }
-#container{
-	margin: 0 auto;
+
+.container {
+	margin : 20px auto;
 	max-width: 600px;
+	/*padding-top: 20px;*/
 }
-#colordisplay{
-	font-size: 200%;	
-}
-h1{
-	color: white;
+
+h1 {
+	color:white;
 	line-height: 1.1;
-	padding: 20px 0;
-	text-align: center;
-	font-weight: normal;
+	padding :20px 0;
+	text-align :center;
 	background-color: steelblue;
-	margin: 0;
+	margin : 0;
+	font-weight: normal;
 	text-transform: uppercase;
 }
-span{
-	color: white;
+
+#colorDisplay {
+	font-size: 200%;
 }
-#stripe{
-	background: white;
+/*span {
+	color: white;
+}*/
+
+#stripe {
+	background-color: white;
 	height: 30px;
 	text-align: center;
-	color: black;
+	color :black;
+	/*margin : auto;*/
 }
-.selected{
-	background: blue;
+
+.selected {
+	background-color: lightblue;
 }
-button{
-	border: none;
-	background: none;
+
+button {
+	border : none;
+	background : none;
 	text-transform: uppercase;
-	height: 100%;
+	height : 100%;
 	font-weight: 700;
-	color:steelblue;
+	color :steelblue;
 	letter-spacing: 1px;
 	font-size: inherit;
-	transition: all 0.3s;
+	transition : all 0.5s;
 	outline: none;
 }
-button:hover{
-	color: white;
-	background:  steelblue;
+
+#message {
+	display :inline-block;
+	width : 20%;
 }
-#message{
-	display: inline-block;
-	width: 20%;
-	color: black;
+button:hover {
+	color: white;
+	background-color: steelblue;
 }
